--- a/app/src/main/res/layout/activity_loading.xml
+++ b/app/src/main/res/layout/activity_loading.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Loading">
+    tools:context=".Loading"
+    android:background="#b22222">
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -17,8 +18,8 @@
         android:layout_marginTop="50dp"
         android:layout_weight="1"
         android:gravity="right"
-        android:text="PARK"
-        android:textColor="#0080FF"
+        android:text="PARK "
+        android:textColor="#ffffff"
         android:textSize="50dp" />
 
     <TextView
@@ -27,7 +28,7 @@
         android:layout_height="match_parent"
         android:layout_marginTop="50dp"
         android:text="SMART"
-        android:textColor="#000000"
+        android:textColor="#ffffff"
         android:textSize="50dp" />
 </LinearLayout>
     <ImageView
