--- a/app/src/main/res/layout/activity_loading.xml
+++ b/app/src/main/res/layout/activity_loading.xml
@@ -19,6 +19,7 @@
         android:layout_weight="1"
         android:gravity="right"
         android:text="PARK "
+        android:textStyle="bold"
         android:textColor="#ffffff"
         android:textSize="50dp" />
 
@@ -28,11 +29,13 @@
         android:layout_height="match_parent"
         android:layout_marginTop="50dp"
         android:text="SMART"
+        android:textStyle="bold"
         android:textColor="#ffffff"
         android:textSize="50dp" />
 </LinearLayout>
+
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/park3"/>
+        android:layout_width="333dp"
+        android:layout_height="420dp"
+        android:src="@drawable/image" />
 </LinearLayout>
